Revert "Poruka - promena footera"
This reverts commit a39bc0ef9515c37fdfbd44bfe039b10900644041.

--- a/kloniranje.html
+++ b/kloniranje.html
@@ -170,6 +170,17 @@
 
 					<div class="officeLocation">
 						<img src="images/pin.png" alt="Pin_marker">
+						<h4>BEIRUT</h4>
+						<address>
+							Dora, Seaside Road,<br>
+							BCP bldg (Facing Demco Steel)<br>
+							Mobile: 961 76 - 866 700<br>
+							Fax: 961 1 - 244 846
+						</address>
+					</div>
+
+					<div class="officeLocation">
+						<img src="images/pin.png" alt="Pin_marker">
 						<h4>BEOGRAD</h4>
 						<address>
 							Vase Carapica 14,<br>
