--- a/kloniranje.html
+++ b/kloniranje.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="only screen">
 	</head>
 	<body>
+		<!-- Komentar proba za izmene -->
 		<div class="bodyWrap">
 
 			<div class="fixedTop">
